--- a/css/styles.css
+++ b/css/styles.css
@@ -9,3 +9,23 @@ White
 Black
 */
 
+body,
+html {
+    height: 100%;
+    margin: 0;
+}
+
+body {
+    background-image: url("../images/home.jpeg");
+    height: 100%;
+    width: auto;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
+.body img {
+    width: 100%;
+    height: auto;
+}
