--- a/css/styles.css
+++ b/css/styles.css
@@ -29,3 +29,41 @@ body {
     width: 100%;
     height: auto;
 }
+
+.footer-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer-content p {
+    margin: 0;
+    padding: 10px 0;
+}
+
+.social-icons {
+    margin-top: 10px;
+}
+
+.social-icons a {
+    margin: 0 10px;
+    display: inline-block;
+}
+
+.social-icons img {
+    width: 24px;
+    height: 24px;
+}
+
+/* Green footer style */
+.green-footer {
+    background-color: #8EBF42;
+    color: white;
+}
+
+/* Black footer style */
+.black-footer {
+    background-color: black;
+    color: white;
+}
