--- a/css/styles.css
+++ b/css/styles.css
@@ -30,25 +30,24 @@ body {
     height: auto;
 }
 
-.footer-content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+footer {
+    padding: 20px 0;
+    text-align: center;
 }
 
-.footer-content p {
-    margin: 0;
-    padding: 10px 0;
+.footer-content {
+    display: flex;
+    justify-content: space-between;
+    padding-left: 5%;
+    padding-right: 5%;
 }
 
 .social-icons {
-    margin-top: 10px;
+    margin-left: 20px;
 }
 
 .social-icons a {
     margin: 0 10px;
-    display: inline-block;
 }
 
 .social-icons img {
