--- a/css/styles.css
+++ b/css/styles.css
@@ -63,7 +63,7 @@ footer {
 
 /* Green footer style */
 .green-footer {
-    background-color: #8EBF42;
+    background-color: #A4AC58;
     color: white;
 }
 
