--- a/css/styles.css
+++ b/css/styles.css
@@ -72,3 +72,40 @@ footer {
     background-color: black;
     color: white;
 }
+
+nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    gap: 20px;
+}
+
+nav ul li {
+    display: inline;
+}
+
+nav ul li a {
+    color: #000;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+nav ul li a.active {
+    border-bottom: 2px solid #000;
+    font-weight: bold;
+}
+
+nav ul li a:hover {
+    border-bottom: 2px solid #000;
+    font-weight: bold;
+}
+
+#navbar {
+    display: flex;
+    justify-content: flex-end; 
+    align-items: center;
+    padding: 20px 40px;
+    background-color: #A4AC58;
+    font-weight: bold;
+}
