--- a/css/styles.css
+++ b/css/styles.css
@@ -146,3 +146,61 @@ nav ul li a:hover {
     background-color: #A4AC58;
     font-weight: bold;
 }
+
+#my-navbar {
+    background-color: #fff;
+    border-bottom: 1px solid #ddd;
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#my-navbar .logo img {
+    width: 100px;
+}
+
+.my-projects {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+    padding: 20px;
+}
+
+.my-project {
+    position: relative;
+    overflow: hidden;
+    border-radius: 5px;
+}
+
+.my-project img {
+    width: 100%;
+    height: auto;
+    display: block;
+}
+
+.my-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #bfcc6c90; /* Green color with transparency */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: opacity 0.3s;
+    border-radius: 5px;
+}
+
+.my-overlay p {
+    color: white;
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+
+.my-project:hover .my-overlay {
+    opacity: 1;
+}
+
