--- a/css/styles.css
+++ b/css/styles.css
@@ -110,41 +110,123 @@ footer {
     color: white;
 }
 
-nav ul {
+#navbar {
+    display: flex;
+    justify-content: space-between; 
+    align-items: center;
+    padding: 20px 40px;
+    background-color: #A4AC58;
+    font-weight: bold;
+}
+
+#navbar .logo {
+    margin-right: auto; 
+}
+
+#navbar .logo img {
+    height: 50px; 
+    width: auto; 
+}
+
+#navbar nav {
+    margin-left: auto; 
+}
+
+#navbar nav ul {
     list-style: none;
     margin: 0;
     padding: 0;
     display: flex;
     gap: 20px;
+    align-items: center; 
 }
 
-nav ul li {
-    display: inline;
-}
-
-nav ul li a {
+#navbar nav ul li a {
     color: #000;
     text-decoration: none;
     font-weight: bold;
+    padding: 5px 10px; 
+    
 }
 
-nav ul li a.active {
-    border-bottom: 2px solid #000;
-    font-weight: bold;
+#navbar nav ul li a.active, #navbar nav ul li a:hover {
+    border-bottom: 2px solid #000; 
 }
-
-nav ul li a:hover {
-    border-bottom: 2px solid #000;
-    font-weight: bold;
-}
-
-#navbar {
+.contact-section {
     display: flex;
-    justify-content: flex-end; 
-    align-items: center;
-    padding: 20px 40px;
-    background-color: #A4AC58;
+    justify-content: space-between;
+    padding: 50px;
+    background-color: #C1C98C;
+    border-radius: 10px;
+    margin: 20px;
+}
+
+.contact-info {
+    max-width: 40%;
+}
+
+.contact-section h1 {
+    font-size: 2.5rem;
+    color: #fff; 
+}
+.contact-section p {
+    margin: 10px 0;
+    color: #fff; 
+}
+
+.contact-form {
+    max-width: 50%;
+    padding-left: 30px;
+}
+
+.contact-form form {
+    display: flex;
+    flex-direction: column;
+}
+
+.contact-form input, .contact-form textarea {
+    margin-bottom: 15px;
+    padding: 23px;
+    border: 1px solid #A4AC58;
+    border-radius: 10px;
+    font-size: 16px;
+    background-color: #fff;
+}
+
+.contact-form textarea {
+    resize: vertical;
+    height: 130px;
+}
+
+.contact-form input:focus, .contact-form textarea:focus {
+    outline: none;
+    border-color: #7A8A3B;
+}
+
+.contact-form button {
+    padding: 15px;
+    border: none;
+    background-color: #7A8A3B;
+    color: #fff;
+    font-size: 18px;
     font-weight: bold;
+    cursor: pointer;
+    border-radius: 50px;
+    transition: background-color 0.3s;
+}
+
+.contact-form button:hover {
+    background-color: #5F6C32;
+}
+.contact-info {
+    color: inherit; 
+}
+
+.contact-info .icon, 
+.contact-info .icon + br + span,
+.contact-info .icon + br + span + br + span,
+.contact-info .icon + br + span + br + span + br + span {
+    color: #fff; 
 }
 
 #my-navbar {
