--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,5 @@
 @charset "UTF-8";
 
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 /* 
 PROJECT COLORS:
@@ -9,13 +8,24 @@ White
 Black
 */
 
-body,
+/* General Rules  ----------- */
+html {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 300;
+}
+
 html {
     height: 100%;
     margin: 0;
 }
 
-body {
+h1 {
+    font-size: 2.5rem;
+}
+
+
+/* Home  ----------- */
+.home-bg {
     background-image: url("../images/home.jpeg");
     height: 100%;
     width: auto;
@@ -23,7 +33,6 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
-    padding-bottom: 60px; /* Adjust based on footer height */
 }
 
 .body img {
@@ -31,51 +40,24 @@ body {
     height: auto;
 }
 
-.top-box {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 20px;
+.white-bg {
+    background-color: white;
 }
 
-.bottom-box {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 20px;
+.green-bg {
+    background-color: #A4AC58;
 }
 
-.top-box .column, .bottom-box .column {
-    flex: 1;
-    margin: 0 10px;
-    text-align: center;
-}
 
-.center-title {
-    flex-basis: 100%;
-    text-align: center;
-}
-
-.top-box .column p {
-    margin-top: 10px;
-}
-
-.bottom-box .column img {
-    max-width: 125%;
-    height: auto;
-    display: block;
-    margin: 10px auto;
-}
-
-.title-about {
-    padding-top: 15%;
-}
+/* Footer  ----------- */
 footer {
     position: fixed;
     bottom: 0;
     width: 100%;
     padding: 20px 0;
     text-align: center;
-    background-color: #A4AC58; /* Default to green-footer color */
     color: white;
+    font-size: .9rem;
 }
 
 .footer-content {
@@ -86,50 +68,51 @@ footer {
 }
 
 .social-icons {
-    margin-left: 20px;
-}
-
-.social-icons a {
-    margin: 0 10px;
+    margin: 10px 20px 0 0;
+    padding: 0;
 }
 
 .social-icons img {
     width: 24px;
-    height: 24px;
+    height: auto;
 }
 
-/* Green footer style */
+/* Green footer */
 .green-footer {
     background-color: #A4AC58;
-    color: white;
 }
 
-/* Black footer style */
+/* Black footer */
 .black-footer {
     background-color: black;
-    color: white;
 }
 
+
+/* Navbar  ----------- */
 #navbar {
     display: flex;
-    justify-content: space-between; 
     align-items: center;
     padding: 20px 40px;
-    background-color: #A4AC58;
-    font-weight: bold;
+    background-color: #ffffff00;
+    flex: auto;
 }
 
 #navbar .logo {
-    margin-right: auto; 
+    flex: 1;
+    margin-right: 10%;
 }
 
 #navbar .logo img {
-    height: 50px; 
-    width: auto; 
+    height: 50px;
+    width: auto;
 }
 
 #navbar nav {
-    margin-left: auto; 
+    flex: 1;
+    display: flex;
+    margin-left: 0%;
+    margin-right: px;
+    justify-content: flex-end;
 }
 
 #navbar nav ul {
@@ -138,110 +121,53 @@ footer {
     padding: 0;
     display: flex;
     gap: 20px;
-    align-items: center; 
+    align-items: center;
 }
 
 #navbar nav ul li a {
     color: #000;
     text-decoration: none;
-    font-weight: bold;
-    padding: 5px 10px; 
-    
+    padding: 1px 10px;
+
 }
 
-#navbar nav ul li a.active, #navbar nav ul li a:hover {
-    border-bottom: 2px solid #000; 
+#navbar nav ul li a.active,
+#navbar nav ul li a:hover {
+    border-bottom: 2px solid #000;
 }
-.contact-section {
+
+
+/* About Us Page  ----------- */
+.top-box {
     display: flex;
     justify-content: space-between;
-    padding: 50px;
-    background-color: #A4AC58;
-    border-radius: 10px;
-    margin: 20px;
+    margin: 3%;
 }
 
-.contact-info {
-    max-width: 40%;
-}
-
-.contact-section h1 {
-    font-size: 2.5rem;
-    color: #fff; 
-}
-.contact-section p {
-    margin: 10px 0;
-    color: #fff; 
-}
-
-.contact-form {
-    max-width: 50%;
-    padding-left: 30px;
-}
-
-.contact-form form {
-    display: flex;
-    flex-direction: column;
-}
-
-.contact-form input, .contact-form textarea {
-    margin-bottom: 15px;
-    padding: 23px;
-    border: 1px solid #A4AC58;
-    border-radius: 10px;
-    font-size: 16px;
-    background-color: #fff;
-}
-
-.contact-form textarea {
-    resize: vertical;
-    height: 130px;
-}
-
-.contact-form input:focus, .contact-form textarea:focus {
-    outline: none;
-    border-color: #7A8A3B;
-}
-
-.contact-form button {
-    padding: 15px;
-    border: none;
-    background-color: #A4AC58;
-    color: #fff;
-    font-size: 18px;
-    font-weight: bold;
-    cursor: pointer;
-    border-radius: 50px;
-    transition: background-color 0.3s;
-}
-
-.contact-form button:hover {
-    background-color: #5F6C32;
-}
-.contact-info {
-    color: inherit; 
-}
-
-.contact-info .icon, 
-.contact-info .icon + br + span,
-.contact-info .icon + br + span + br + span,
-.contact-info .icon + br + span + br + span + br + span {
-    color: #fff; 
-}
-
-#my-navbar {
-    background-color: #fff;
-    border-bottom: 1px solid #ddd;
-    padding: 20px;
+.bottom-box {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    margin: 0;
 }
 
-#my-navbar .logo img {
-    width: 100px;
+.top-box .column,
+.bottom-box .column {
+    flex: 1;
+    text-align: center;
 }
 
+.top-box .column p {
+    padding: 4%;
+}
+
+.bottom-box .column img {
+    max-width: 125%;
+    height: auto;
+    padding: 0 1%;
+}
+
+
+/* Project Page ----------- */
 .my-projects {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -267,7 +193,8 @@ footer {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #bfcc6c90; /* Green color with transparency */
+    background-color: #bfcc6c90;
+    /* Green color with transparency */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -279,10 +206,95 @@ footer {
 .my-overlay p {
     color: white;
     font-size: 1.5rem;
-    font-weight: bold;
 }
 
 .my-project:hover .my-overlay {
     opacity: 1;
 }
 
+
+/* Contact Page ----------- */
+.contact-section {
+    display: flex;
+    justify-content: space-between;
+    padding: 50px;
+    background-color: #A4AC58;
+    border-radius: 10px;
+    margin: 20px;
+}
+
+.contact-info {
+    max-width: 40%;
+    padding-left: 10%;
+    padding-top: 3%;
+}
+
+.contact-section h1 {
+    margin-bottom: 35px;
+    color: #fff;
+}
+
+.contact-section p {
+    margin: .5px;
+    color: #fff;
+}
+
+.contact-form {
+    max-width: 50%;
+    min-width: 40%;
+}
+
+.contact-form form {
+    display: flex;
+    flex-direction: column;
+}
+
+.contact-form input,
+.contact-form textarea {
+    margin-bottom: 15px;
+    padding: 18px;
+    border: 1px solid #A4AC58;
+    border-radius: 10px;
+    font-size: 14px;
+    background-color: #fff;
+}
+
+/* Gives more space to the input 'message' */
+.contact-form textarea {
+    resize: vertical;
+    height: 130px;
+}
+
+.contact-form button {
+    background-color: rgba(255, 255, 255, 0.001);
+    border: solid white 1px;
+    color: white;
+    padding: 0.5rem .3rem;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 1rem;
+    transition-duration: 0.4s;
+    font-family: "Quicksand", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: .95rem;
+    text-transform: capitalize;
+    max-width: 100px;
+    width: auto;
+}
+
+.contact-form button:hover {
+    background-color: #5F6C32;
+}
+
+.contact-info {
+    color: inherit;
+}
+
+.contact-info .icon,
+.contact-info .icon+br+span,
+.contact-info .icon+br+span+br+span,
+.contact-info .icon+br+span+br+span+br+span {
+    color: #fff;
+}
